packages/helpers/src/styles/helpers.scss
@import "./px-to-rem.scss";

// Colors &etc.

:root {
  --white: #ffffff;
  --cc-charcoal: #3f3f3f;
  --cc-charcoal-hint: #828282;
  --cc-charcoal-light-1: #979797;
  --cc-charcoal-light-2: #dfdfdf;
  --cc-teal-dark-2: #016082;
  --cc-teal-dark-1: #0481a0;
  --cc-teal-dark-1-alpha-50: rgba(4, 129, 160, 0.5);
  --cc-teal-dark-1-alpha-0: rgba(4, 129, 160, 0);
  --cc-teal: #0592af;
  --cc-teal-light-1: #2ba5c1;
  --cc-teal-light-2: #6fc6da;
  --cc-teal-light-3: #93d5e4;
  --cc-teal-light-4: #b7e2ec;
  --cc-teal-light-5: #cdebf2;
  --cc-teal-light-6: #e2f4f8;
  --cc-teal-light-7: #f5fbfc;
  --cc-orange-dark-1: #ea6d2f;
  --cc-orange-dark-1-alpha-35: #f7cab6; // approximates rgba(234, 109, 47, 0.35) w/o transparency;
  --cc-orange: #ff8415;
  --cc-orange-light-1: #ffa350;
  --cc-orange-light-2: #ffc18a;
  --cc-orange-light-3: #ffcea1;
  --cc-orange-light-4: #ffe6d0;
  --cc-orange-light-4-b: #ffeddc;
  --cc-orange-light-5: #fff2e7;
  --cc-orange-light-6: #fff9f3;
  --cc-ap-button-color: #000000;
  --cc-ap-button-default: #ffba7d;
  --cc-ap-button-hover: #ff9a42;
  --cc-ap-button-click: #ff8113;
  --cc-ap-button-border: #949494;
  --cc-ap-button-focus-ring: #0957d0;
  // The browser-native focus ring color (matches native controls like the comment textarea
  // and the thumbnail delete button). See the native-focus-ring mixin below.
  --cc-native-focus-ring: #005fcc;
}


$correctColor: #055c05;
$incorrectColor: #930606;

$themeColor1: #83cddd;
$themeColor2: #34a5be;

@mixin ap-styles {
  // These values should match the Activity Player. In the future, we might extend interactive API so the Activity Player can provide them.
  font-family: Lato, Arial, Helvetica, sans-serif;
  font-size: pxToRem(16);
  font-weight: 400;
  line-height: 1.35 !important;
  padding: 20px 20px 13px;

  input[type=checkbox], input[type=radio] {
    margin-right: 10px;
  }
}

@mixin lara-styles {
  // These values should match LARA. In the future, we might extend interactive API so LARA can provide them.
  padding: 20px 20px 13px;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: pxToRem(16);

  input[type=checkbox], input[type=radio] {
    margin-right: 10px;
  }
}

// Browser-native keyboard focus ring, so custom-styled controls match native controls
// (the comment textarea, the thumbnail delete button, etc.). Two outline declarations on
// purpose: the token is the fallback for engines that don't support the -webkit- keyword
// (Firefox keeps the first declaration and drops the second). Pass an offset to push the
// ring outside a selection border, e.g. native-focus-ring(3px).
@mixin native-focus-ring($offset: 2px) {
  outline: 2px solid var(--cc-native-focus-ring);
  outline: 2px solid -webkit-focus-ring-color;
  outline-offset: $offset;
}

@mixin interactive-button {
  display: flex;
  align-items: center;
  margin: 5px 10px;
  width: fit-content;
  box-sizing: border-box;
  padding: 7px 10px 8px;
  border-radius: 4px;
  height: 34px;
  border: solid 1.5px var(--cc-charcoal-light-1);
  background-color: var(--cc-teal-light-5);
  font-weight: normal;
  color: var(--cc-charcoal);
  &.withIcon {
    padding: 0px;
  }
  &:hover {
    background-color: var(--cc-teal-light-4);
  }
  &:active {
    background-color: var(--cc-teal-light-3);
  }
  &.disabled, :disabled {
    opacity: 0.3;
    pointer-events: none;
  }
  svg {
    fill: var(--cc-teal-light-1);
    width: 36px;
    &.smallIcon {
      width: 17px;
      height: 17px;
      margin-left: 8px;
      margin-right: 8px;
      vertical-align: middle;
    }
  }
  .buttonText {
    // margin: 7px 0 8px 5px;
    font-size: pxToRem(16);
    white-space: nowrap;
    padding-right: 10px;
  }
}



@mixin ap-button {
  background-color: var(--cc-ap-button-default);
  border: solid 1.5px var(--cc-ap-button-border);
  border-radius: 4px;
  color: var(--cc-ap-button-color);
  cursor: pointer;
  flex-grow: 0;
  flex-shrink: 0;
  font-weight: bold;
  font-size: pxToRem(20);
  height: 44px;
  min-width: 100px;
  padding: 5px 10px 5px 10px;
  white-space: nowrap;

  &:hover {
    background-color: var(--cc-ap-button-hover);
  }
  &:focus-visible {
    background-color: var(--cc-ap-button-hover);
    box-shadow: inset 0 0 0 2.5px var(--cc-ap-button-focus-ring), inset 0 0 0 3.5px white;
    outline: none;
  }
  &:active {
    background-color: var(--cc-ap-button-click);
  }

  &:disabled {
    cursor: not-allowed;
    opacity: 0.35;
  }

  svg {
    fill: currentColor;
  }
}

// Based on LARA btn mixin from mw-runtime-base.scss (after little cleanup).
@mixin lara-button($color1: $themeColor1, $color2: $themeColor2) {
  font-size: 20px;
  font-weight: 500;
  color: #fcfcfc;
  padding: 5px 10px;
  // Color-dependent rules:
  background: $color1;
  background-image: linear-gradient(to bottom, $color1, $color2);
  border: 1px solid $color2;
  text-shadow: 0 -1px 0 darken($color1, 25%);
  // ---
  box-shadow: rgba(255, 255, 255, 0.4) 0 1px 0 inset, rgba(0, 0, 0, 0.2) 0 1px 2px;
  border-radius: 4px;
  margin-top: 13px;
  cursor: pointer;
  text-transform: none;
  text-align: center;
  transition: all ease-in;

  &:hover {
    background-color: darken($color1, 5%);
    background-image: linear-gradient(to bottom, darken($color1, 5%), darken($color2, 10%));
  }

  &:active {
    background-color: darken($color1, 10%);
    background-image: linear-gradient(to bottom, darken($color1, 10%), darken($color2, 5%));
  }

  &:disabled {
    cursor: not-allowed;
    opacity: 0.3;
  }

  // Icon.
  svg {
    fill: #fcfcfc;
  }
}

.error {
  font-weight: bold;
  color: darkred;
}

.apButton {
  @include ap-button;
  & + & {
    margin-left: 10px;
  }
}

.interactiveButton {
  @include interactive-button;
  & + & {
    margin-left: 10px;
  }
}

.laraButton {
  @include lara-button;
  & + & {
    margin-left: 10px;
  }
}

.smallIcon {
  width: 17px;
  height: 17px;
  vertical-align: middle;
}

.mediumIcon {
  width: 22px;
  height: 22px;
  vertical-align: middle;
}

